--- a/index.html
+++ b/index.html
@@ -1030,7 +1030,7 @@ function createWorld() {
         trunk.castShadow = true;
         tree.add(trunk);
 
-        const c = 0x104a18 + Math.floor(Math.random() * 0x002000);
+        const c = 0x083f14 + Math.floor(Math.random() * 0x002000);
         const leafMat = new THREE.MeshLambertMaterial({ color: c });
         const leaves = new THREE.Mesh(leafGeo, leafMat);
         leaves.position.y = 3 + 9;
