--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@ function updatePhysics(dt) {
         sim.onGround = false;
         if (sim.pos.y < bellyHeight) {
             sim.crashed = true;
-            document.getElementById('overlay-msg').innerHTML = "CRITICAL DAMAGE<br>Gear Up Landing";
+            document.getElementById('overlay-msg').innerHTML = "CRASH<br>Click to Reset";
             document.getElementById('overlay-msg').style.display = 'block';
         }
     }
