--- a/index.html
+++ b/index.html
@@ -1141,7 +1141,7 @@ function createWorld() {
     const trunkMat = new THREE.MeshLambertMaterial({ color: 0x4a3018 });
     const leafGeo = new THREE.ConeGeometry(5, 16, 12);
 
-    for (let i = 0; i < 1800; i++) {
+    for (let i = 0; i < 900; i++) {
         const x = (Math.random() - 0.5) * 4500;
         const z = (Math.random() - 0.5) * 4500;
         if (Math.abs(x) < 80 && Math.abs(z) < 1900) continue;
@@ -1157,7 +1157,7 @@ function createWorld() {
         const leafMat = new THREE.MeshLambertMaterial({ color: c });
         const leaves = new THREE.Mesh(leafGeo, leafMat);
         leaves.position.y = 3 + 9;
-        leaves.castShadow = false;
+        leaves.castShadow = true;
         tree.add(leaves);
 
         tree.position.set(x, 0.5, z);
